--- a/install
+++ b/install
@@ -63,11 +63,11 @@ fi
 
 # Initially capture the root password for this computer and write it out to .vaultpass
 if [ ! -f "$install_source/.vaultpass" ]; then
-  while [ -z $root_pass ] || [ -z $root_pass_confirm ] || [ $root_pass != $root_pass_confirm ]; do
+  while [ -z "$root_pass" ] || [ -z "$root_pass_confirm" ] || [ "$root_pass" != "$root_pass_confirm" ]; do
     read -s -p "And what is the root password for this Mac? (will also be used as the MacOSa vault password) " root_pass
     printf "\n"
     read -s -p "Re-enter the password: " root_pass_confirm
-    if [ $root_pass != $root_pass_confirm ]; then
+    if [ "$root_pass" != "$root_pass_confirm" ]; then
       printf "\n\033[31mPasswords don't match, please try again\033[0m\n"
     fi
   done
