--- a/install
+++ b/install
@@ -66,7 +66,7 @@ fi
 # Initially capture the root password for this computer and write it out to .vaultpass
 if [ ! -f "$install_source/.vaultpass" ]; then
   while [ -z "$root_pass" ] || [ -z "$root_pass_confirm" ] || [ "$root_pass" != "$root_pass_confirm" ]; do
-    read -s -p "And what is the root password for this Mac? (will also be used as the MacOSa vault password) " root_pass
+    read -s -p "What is the root password for this Mac? (will also be used as the MacOSa vault password) " root_pass
     printf "\n"
     read -s -p "Re-enter the password: " root_pass_confirm
     if [ "$root_pass" != "$root_pass_confirm" ]; then
@@ -74,7 +74,7 @@ if [ ! -f "$install_source/.vaultpass" ]; then
     fi
   done
   printf "\n"
-  echo $root_pass > "$install_source/.vaultpass"
+  echo "$root_pass" > "$install_source/.vaultpass"
 else
   root_pass = $(cat "$install_source/.vaultpass")
 fi
