--- a/install
+++ b/install
@@ -43,11 +43,11 @@ done
 if $remote; then
   cd /tmp
   printf "Downloading MacOSa source files...\n"
-  curl -H 'Cache-Control: no-cache' -L -o master.zip https://github.com/rockholla/macosa/zipball/master/
+  rm -rf /tmp/macosa* &>/dev/null
+  rm -rf /tmp/rockholla* &>/dev/null
+  rm -rf /tmp/master.zip &>/dev/null
+  curl -L -o master.zip https://github.com/rockholla/macosa/zipball/master/
   unzip master.zip
-  if [ -d /tmp/macosa ]; then
-    rm -rf /tmp/macosa
-  fi
   mv rockholla-macosa* macosa
   install_source="/tmp/macosa"
   rm master.zip
@@ -141,7 +141,7 @@ if [ ! -d ~/.macosa/user ]; then
     cd "$install_source"
   else
     cd /tmp
-    curl -H 'Cache-Control: no-cache' -L -o master.zip https://github.com/rockholla/mymacosa/zipball/master/
+    curl -L -o master.zip https://github.com/rockholla/mymacosa/zipball/master/
     unzip master.zip
     mv rockholla-mymacosa* ~/.macosa/user
     rm master.zip
