--- a/install
+++ b/install
@@ -86,19 +86,20 @@ fi
 echo "$root_pass" | sudo -S systemsetup -setcomputersleep Never
 echo "$root_pass" | sudo -S systemsetup -setdisplaysleep Never
 
-# move launchd on-reboot item into place
-if [ ! -f ~/Library/LaunchAgents/com.macosa.onboot.plist ]; then
-  cp files/com.macosa.onboot.plist ~/Library/LaunchAgents/
-  username=$(whoami)
-  sed -i -e "s/{{ whoami }}/$username/g" ~/Library/LaunchAgents/com.macosa.onboot.plist
-  chmod 0644 ~/Library/LaunchAgents/com.macosa.onboot.plist
-fi
-
 # Time to install the MacOSa files and record a few things
 if [ ! -d ~/.macosa ]; then
   printf "Installing MacOSa to your machine...\n"
   # Install this repo to ~/.macosa
   rsync -a . ~/.macosa
+fi
+
+# copy launchd on-reboot item into place
+if [ ! -f ~/Library/LaunchAgents/com.macosa.onboot.plist ]; then
+  mkdir -p ~/Library/LaunchAgents
+  cp ~/.macosa/files/com.macosa.onboot.plist ~/Library/LaunchAgents/
+  username=$(whoami)
+  sed -i -e "s/{{ whoami }}/$username/g" ~/Library/LaunchAgents/com.macosa.onboot.plist
+  chmod 0644 ~/Library/LaunchAgents/com.macosa.onboot.plist
 fi
 
 # initialize macosa-generated Ansible variable file
