add say statement for MyMacOSa initialization

--- a/install
+++ b/install
@@ -121,7 +121,7 @@ fi
 # Let's run a system software update first before installing
 ./bin/macosa_softwareupdate '$install_source/install "$@"'
 # We need at least xcode tools installed before installing rvm
-say "To continue, please select install in the popup window"
+say "To continue, please click install in the popup window"
 ./bin/macosa_xcode tools 1>/dev/null
 # We need ruby/rvm early on in the process
 ./bin/macosa_ruby '$install_source/install "$@"'
@@ -129,6 +129,7 @@ say "To continue, please select install in the popup window"
 ./bin/macosa_xcode $xcode
 
 if [ ! -d ~/.macosa/user ]; then
+  say "Time to initialize your area for customizing My MacOSa"
   printf "We need to initialize the 'My MacOSa' part of your install.  Please see https://github.com/rockholla/mymacosa for more info.\n"
   read -p "If you have one, please enter the git ssh repo URI where your MacOSa customizations live (if blank, we'll just create a base repo locally for you from https://github.com/rockholla/mymacosa): " mymacosa_repo
   if [ ! -z $mymacosa_repo ];
