--- a/install
+++ b/install
@@ -121,7 +121,7 @@ fi
 # Let's run a system software update first before installing
 ./bin/macosa_softwareupdate '$install_source/install "$@"'
 # We need at least xcode tools installed before installing rvm
-say "To continue, please click install in the popup window"
+say "To continue, please click install in the following popup window"
 ./bin/macosa_xcode tools 1>/dev/null
 # We need ruby/rvm early on in the process
 ./bin/macosa_ruby '$install_source/install "$@"'
