--- a/install
+++ b/install
@@ -6,6 +6,8 @@ remote=false
 root_pass=""
 root_pass_confirm=""
 fresh=false
+args="$@"
+rebootargs=${args/-f/}
 
 function usage () {
    cat <<EOF
@@ -130,11 +132,11 @@ if [ ! -f ~/.macosa/vars/internal.yml ]; then
 fi
 
 # Let's run a system software update first before installing
-./bin/macosa_softwareupdate '$install_source/install "$@"'
+./bin/macosa_softwareupdate "$install_source/install $rebootargs"
 # We need at least xcode tools installed before installing rvm
 ./bin/macosa_xcode tools 1>/dev/null
 # We need ruby/rvm early on in the process
-./bin/macosa_ruby '$install_source/install "$@"'
+./bin/macosa_ruby "$install_source/install $rebootargs"
 # make sure xcode and/or xcode tools are installed
 ./bin/macosa_xcode $xcode
 
