--- a/install
+++ b/install
@@ -139,7 +139,7 @@ if [ ! -d ~/.macosa/user ]; then
   say "Time to initialize your area for customizing My MacOSa"
   printf "We need to initialize the 'My MacOSa' part of your install.  Please see https://github.com/rockholla/mymacosa for more info.\n"
   read -p "If you have one, please enter the git ssh repo URI where your MacOSa customizations live (if blank, we'll just create a base repo locally for you from https://github.com/rockholla/mymacosa): " mymacosa_repo
-  if [ ! -z $mymacosa_repo ];
+  if [ ! -z $mymacosa_repo ]; then
     read -p "And a particular version of the repo you'd like to check out? (default = master): " mymacosa_repo_version
     if [ -z $mymacosa_repo_version ]; then
       mymacosa_repo_version="master"
