--- a/install
+++ b/install
@@ -153,7 +153,7 @@ if [ ! -d ~/.macosa/user ]; then
   fi
 fi
 
-printf "\nRunning MacOSa script for local machine setup and provisioning...\n"
+printf "\nRunning local machine provisioning...\n"
 ~/.macosa/bin/macosa $passthru
 
 rm -rf "$install_source"
