--- a/install
+++ b/install
@@ -17,7 +17,7 @@ Options:
   -f                    Force a fresh install
   -r                    If present, this is a remote install and the repo should be downloaded locally first
   -h                    Show this help
-  -x [tools|<version>]  If an Xcode version is supplied for this argument, MacOSa will install that version, if "tools" just installs XCode cli tools (default = "tools")
+  -x [tools|full]       "full" will attempt to install the full Xcode app/suite, you'll be able to input the version you want during the install process. If "tools" only XCode cli tools will be installed (default = "tools")
 
 EOF
   exit 0
@@ -131,10 +131,6 @@ fi
 
 # Let's run a system software update first before installing
 ./bin/macosa_softwareupdate "$install_source/install $rebootargs"
-# We need at least xcode tools installed before installing rvm
-./bin/macosa_xcode tools 1>/dev/null
-# We need ruby/rvm early on in the process
-./bin/macosa_ruby "$install_source/install $rebootargs"
 # make sure xcode and/or xcode tools are installed
 ./bin/macosa_xcode $xcode
 
