--- a/install
+++ b/install
@@ -2,6 +2,7 @@
 
 passthru=""
 xcode="tools"
+branch="master"
 remote=false
 root_pass=""
 root_pass_confirm=""
@@ -17,6 +18,7 @@ Options:
   -f                    Force a fresh install
   -r                    If present, this is a remote install and the repo should be downloaded locally first
   -h                    Show this help
+  -b                    Install from branch, useful for installing from testing branches other than master
   -x [tools|full]       "full" will attempt to install the full Xcode app/suite, you'll be able to input the version you want during the install process. If "tools" only XCode cli tools will be installed (default = "tools")
 
 EOF
@@ -37,6 +39,10 @@ while [[ $# -gt 0 ]]; do
       usage
       shift
       ;;
+    -b)
+      branch="$2"
+      shift 2
+      ;;
     -x)
       xcode="$2"
       shift 2
@@ -51,7 +57,7 @@ done
 if $remote; then
   cd ~/Downloads
   if [ ! -d macosa ] || [ $fresh == true ]; then
-    bash <(curl https://raw.githubusercontent.com/rockholla/macosa/master/bin/macosa_download) "install"
+    bash <(curl https://raw.githubusercontent.com/rockholla/macosa/$branch/bin/macosa_download) "install"
   fi
   install_source="$(pwd)/macosa"
 else
