--- a/install
+++ b/install
@@ -138,12 +138,8 @@ fi
 
 # Let's run a system software update first before installing
 ./bin/macosa_softwareupdate "$install_source/install $rebootargs"
-# make sure full xcode tools are installed
-if [[ "$xcode" == "full" ]]; then
-  ./bin/macosa_xcode "full"
-fi
-# Ensure that tools are installed as well, in certain cases we need to explicitly run 'xcode-select --install' even after installing full xcode
-./bin/macosa_xcode "tools"
+# make sure either xcode tools or full xcode is installed
+./bin/macosa_xcode "$xcode"
 # make sure homebrew is installed
 ./bin/macosa_homebrew
 
