changes around setting os version parts, how it's used in el capitan specific things for xcode

--- a/install
+++ b/install
@@ -103,6 +103,8 @@ fi
 
 cd ~/.macosa
 
+./bin/macosa_get_os_version
+
 # copy launchd on-reboot item into place
 if [ ! -f ~/Library/LaunchAgents/com.macosa.onboot.plist ]; then
   mkdir -p ~/Library/LaunchAgents
