--- a/install
+++ b/install
@@ -141,7 +141,7 @@ fi
 # make sure either xcode tools or full xcode is installed
 ./bin/macosa_xcode "$xcode"
 # make sure homebrew is installed
-echo $(cat ~/.macosa/.vaultpass) | sudo -u $(whoami) -S ./bin/macosa_homebrew
+./bin/macosa_homebrew "$root_pass"
 
 if [ ! -d ~/.macosa/user ]; then
   say "Time to initialize your area for customizing My Mac O S A"
